// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformEnduserConsent tests should add customized scope elements to formbag 1`] = `
{
  "data": {
    "consent.scopes.custom1": true,
    "consent.scopes.custom2": true,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "key": "consent.scopes.custom1",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.custom1",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.custom1.label",
            "name": "label",
            "noTranslate": true,
            "value": "View your custom info",
          },
          {
            "i18nKey": "consent.scopes.custom1.desc",
            "name": "description",
            "noTranslate": true,
            "value": "This will allow the app to view your custom info",
          },
        ],
        "type": "Field",
      },
      {
        "key": "consent.scopes.custom2",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.custom2",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.custom2.label",
            "name": "label",
            "noTranslate": true,
            "value": "View your custom 2",
          },
          {
            "i18nKey": "consent.scopes.custom2.desc",
            "name": "description",
            "noTranslate": true,
            "value": undefined,
          },
        ],
        "type": "Field",
      },
      {
        "options": {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "options": {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformEnduserConsent tests should add non-customized scope elements to formbag 1`] = `
{
  "data": {
    "consent.scopes.email": true,
    "consent.scopes.phone": true,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "key": "consent.scopes.email",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.email",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.email.label",
            "name": "label",
            "noTranslate": false,
            "value": "consent.scopes.email.label",
          },
          {
            "i18nKey": "consent.scopes.email.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.email.desc",
          },
        ],
        "type": "Field",
      },
      {
        "key": "consent.scopes.phone",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.phone",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.phone.label",
            "name": "label",
            "noTranslate": false,
            "value": "consent.scopes.phone.label",
          },
          {
            "i18nKey": "consent.scopes.phone.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.phone.desc",
          },
        ],
        "type": "Field",
      },
      {
        "options": {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "options": {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformEnduserConsent tests should not add scopes when none exist in the transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "options": {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "options": {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
